tests/baselines/reference/TupleType4.errors.txt
tests/cases/conformance/parser/ecmascript5/TupleTypes/TupleType4.ts(1,9): error TS1005: ']' expected.


==== tests/cases/conformance/parser/ecmascript5/TupleTypes/TupleType4.ts (1 errors) ====
    var v: [
            
!!! error TS1005: ']' expected.